GenI 0.22, XX
----------------------
  * Polarity filtering no longer requires all subst/root nodes to have
    the feature defined.

GenI 0.20, 29 Sep 2009
----------------------
- NON BACKWARD-COMPATIBLE CHANGES

  * GHC 6.8 or higher now required (GHC 6.10 + Haskell Platform preferred)
  * Input files now *assumed* to be UTF-8 encoded
    (output still ISO8859-1; hopefully locale-based in GHC 6.12)
  * Interface between GenI and morphological realiser now uses a JSON format.
  * Rootfeat optimisation now mandatory (flag no longer recognised)

- NEW FUNCTIONALITY

  * new flag --version now works and reports version from Cabal file
  * new flag --dump dumps derivation output to stdout in JSON format
  * new flag --ranking foo ranks outputs according to OT-style constraints expressed in foo
  * --batchdir now works with --testcase
  * --batchdir now dumps derivations and statistics in JSON format
  * --batchdir now works with instructions files
  * --metrics always expands 'default' to the default metrics
    (in addition to any other statistics you request)
  * new optimisation: early null-adjunction detection

- QUALITY ASSURANCE

  * Reference manual in docs/genimanual.pdf (make docs)
  * cabal install -fgui and cabal install produce the same underlying library
    only the executable is different
  * Easier GUI installation for MacOS X (application bundles now built
    automatically; no manual intervention required)
  * Adopted odd/even convention to distinguish devel builds from stable ones
    (eg. GenI 0.21.x is devel whereas GenI 0.20.x is stable)

GenI 0.17.4, 6 Apr 2009
-----------------------
* GHC 6.6 support

* GUI disabled by default

GenI 0.17.3, 3 Apr 2009
-----------------------
* Simplified build method
  * one single cabal package instead of two
  * cabal configure -f-gui to disable GUI
  * makefile stripped out

* Lexical selection on empty semantics now allowed
  * This is so that the zero-literal semantics mechanism can work again
