@@ -110,6 +110,7 @@ getAllFlags f fs = catMaybes [ cast v | flg@(Flag _ v) <- fs, isFlag f flg ]
 -- ----------------------------------------------------------------------
 
 data BatchDirFlg = BatchDirFlg FilePath deriving (Eq, Show, Typeable)
+data ChartMaxSzFlg = ChartMaxSzFlg Integer deriving (Eq, Show, Typeable)
 data DisableGuiFlg = DisableGuiFlg () deriving (Eq, Show, Typeable)
 data DetectPolaritiesFlg = DetectPolaritiesFlg (Set.Set PolarityAttr) deriving (Eq, Show, Typeable)
 data DumpDerivationFlg = DumpDerivationFlg () deriving (Eq, Show, Typeable)
